@@ -78,7 +78,8 @@ literal|0
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -173,7 +174,8 @@ literal|1
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -185,7 +187,8 @@ literal|"subInfos=(abcdefghijklmnopqrs((0,19)))/1.0(0,19)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -237,7 +240,8 @@ literal|1
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -255,7 +259,8 @@ name|println
 argument_list|(
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -272,7 +277,8 @@ literal|"subInfos=(abcdefghjklmnopqrs((0,21)))/1.0(0,21)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -322,7 +328,8 @@ literal|1
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -334,7 +341,8 @@ literal|"subInfos=(a((0,1)))/1.0(0,100)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -384,7 +392,8 @@ literal|1
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -396,7 +405,8 @@ literal|"subInfos=(a((0,1))a((2,3)))/2.0(0,100)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -429,7 +439,8 @@ literal|1
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -441,7 +452,8 @@ literal|"subInfos=(a((0,1))a((18,19)))/2.0(0,20)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -474,7 +486,8 @@ literal|1
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -486,7 +499,8 @@ literal|"subInfos=(a((8,9))a((18,19)))/2.0(2,22)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -536,7 +550,8 @@ literal|2
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -548,7 +563,8 @@ literal|"subInfos=(a((0,1)))/1.0(0,20)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -565,7 +581,8 @@ literal|"subInfos=(a((28,29)))/1.0(22,42)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -598,7 +615,8 @@ literal|2
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -610,7 +628,8 @@ literal|"subInfos=(a((0,1)))/1.0(0,20)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -627,7 +646,8 @@ literal|"subInfos=(a((26,27)))/1.0(20,40)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -660,7 +680,8 @@ literal|2
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -672,7 +693,8 @@ literal|"subInfos=(a((0,1)))/1.0(0,20)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -689,7 +711,8 @@ literal|"subInfos=(a((20,21)))/1.0(20,40)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -739,7 +762,8 @@ literal|0
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -767,7 +791,8 @@ literal|1
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -779,7 +804,8 @@ literal|"subInfos=(b((2,3)))/1.0(0,20)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -812,7 +838,8 @@ literal|1
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -824,7 +851,8 @@ literal|"subInfos=(a((0,1))b((2,3)))/2.0(0,20)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -874,7 +902,8 @@ literal|0
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -902,7 +931,8 @@ literal|0
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -930,7 +960,8 @@ literal|1
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -942,7 +973,8 @@ literal|"subInfos=(ab((0,3)))/1.0(0,20)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -992,7 +1024,8 @@ literal|1
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -1004,7 +1037,8 @@ literal|"subInfos=(ab((0,1)(4,5)))/1.0(0,20)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -1161,7 +1195,8 @@ literal|1
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -1173,7 +1208,8 @@ literal|"subInfos=(d((9,10)))/1.0(3,103)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -1265,7 +1301,8 @@ literal|1
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -1277,7 +1314,8 @@ literal|"subInfos=(searchengines((102,116))searchengines((157,171)))/2.0(96,196)
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
@@ -1374,7 +1412,8 @@ literal|1
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|size
 argument_list|()
@@ -1386,7 +1425,8 @@ literal|"subInfos=(sppeeeed((88,93)))/1.0(82,182)"
 argument_list|,
 name|ffl
 operator|.
-name|fragInfos
+name|getFragInfos
+argument_list|()
 operator|.
 name|get
 argument_list|(
